--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -52,8 +52,8 @@
 
     <!-- Footer -->
     <div class="footer-active">
-        <footer id="footer-describe"> &copy; Derechos Reservados 2024</footer>
-        <p>CauichDev</p>
+        <footer id="footer-describe"> &copy;2024</footer>
+        <p>Mi primer "deploy"</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
