--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -77,8 +77,8 @@
     </div>
     <footer class="footer-active">
         <div footer="footer-find">
-            <h5>&copy; Derechos Reservados</h5>
-            <p>CauichDev</p>
+            <h5>&copy; </h5>
+            <p>Mi primer "deploy"</p>
         </div>
     </footer>
 
