--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -52,7 +52,7 @@
 
     <!-- Footer -->
     <div class="footer-active">
-        <footer id="footer-describe"> &copy;2024</footer>
+        <footer id="footer-describe"> &copy</footer>
         <p>Mi primer "deploy"</p>
     </div>
 
