--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -77,7 +77,7 @@
     </div>
     <footer class="footer-active">
         <div footer="footer-find">
-            <h5>&copy; </h5>
+            <h5>&copy</h5>
             <p>Mi primer "deploy"</p>
         </div>
     </footer>
